# hodlgen

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README.md  configure.ac
src/: byte_store.cc  byte_store.h  diceBitConverter.cc  diceBitConverter.h  main.cc
tests/: byte_store_tests.cc  cpp_assumptions.cc  diceBitConverterTest.cc
